tweaked a few things fixed nav bar photo overlap

--- a/src/css/pageStyles/photographyPage.css
+++ b/src/css/pageStyles/photographyPage.css
@@ -107,10 +107,12 @@
 @keyframes fade{
     from {
         opacity: 0;
+        margin-top: 100%;
         
     }
     to {
         opacity: 1;
+        margin-top: 0%;
     }
 }
 
@@ -118,7 +120,7 @@
     position: absolute;
     top: 15px;
     right: 35px;
-    color: #f1f1f1;
+    color: black;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
